--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "setup-db": "node src/supabase/setup.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@supabase/supabase-js": "^2.39.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "uuid": "^9.0.0",
-    "joi": "^17.9.2",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
