--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "wokopay-supabase",
+  "name": "wokopay-api",
   "version": "1.0.0",
-  "type": "module",
-  "description": "WokoPay API with Supabase",
+  "description": "WokoPay Cross-border Payment API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup-db": "node src/supabase/setup.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
+    "express": "^4.18.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.3",
-    "uuid": "^9.0.0"
+    "express-rate-limit": "^6.10.0",
+    "dotenv": "^16.0.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "uuid": "^9.0.0",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.22"
   }
 }
